--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: PPI Südvorstadt
 logo: /Logo.JPEG
 description: PP (people) IS ÜniteD
 theme: jekyll-theme-minimal
-show_downloads: true
+show_downloads: false
